<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#FAFAFA">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:layout_marginTop="38dp"
        android:textColor="#ffffffff"
        android:background="@android:color/holo_blue_dark"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:onClick="sendSimpleToast" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_list"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#ffffffff"
        android:onClick="sendSimpleToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#ffffffff"
        android:onClick="sendSimpleToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scaling_app"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:textColor="#ffffffff"
        android:onClick="sendSimpleToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:textColor="#ffffffff"
        android:onClick="sendSimpleToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light"
        android:textColor="#ffffffff"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="sendSimpleToast" />

</RelativeLayout>
